# ChangeLog for dev-php/PEAR-Numbers_Words
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Numbers_Words/ChangeLog,v 1.28 2010/02/16 04:58:30 beandog Exp $

*PEAR-Numbers_Words-0.16.1 (16 Feb 2010)

  16 Feb 2010; Steve Dibb <beandog@gentoo.org>
  +PEAR-Numbers_Words-0.16.1.ebuild:
  Version bump

  06 Dec 2007; Markus Ullmann <jokey@gentoo.org>
  -PEAR-Numbers_Words-0.14.0.ebuild, PEAR-Numbers_Words-0.15.0.ebuild:
  LICENSE fix from project overlay

  02 Dec 2007; Jakub Moc <jakub@gentoo.org>
  PEAR-Numbers_Words-0.15.0.ebuild:
  Fix LICENSE

  22 Oct 2007; Raúl Porcel <armin76@gentoo.org>
  PEAR-Numbers_Words-0.15.0.ebuild:
  ia64 stable wrt #192247

  05 Oct 2007; Raúl Porcel <armin76@gentoo.org>
  PEAR-Numbers_Words-0.15.0.ebuild:
  alpha/sparc stable wrt #192247

  28 Sep 2007; Christoph Mende <angelos@gentoo.org>
  PEAR-Numbers_Words-0.15.0.ebuild:
  Stable on amd64 wrt bug #192247

  26 Sep 2007; Brent Baude <ranger@gentoo.org>
  PEAR-Numbers_Words-0.15.0.ebuild:
  Marking PEAR-Numbers_Words-0.15.0 ppc64 stable for bug 192247

  25 Sep 2007; Lars Weiler <pylon@gentoo.org>
  PEAR-Numbers_Words-0.15.0.ebuild:
  stable ppc, bug #192247

  21 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  PEAR-Numbers_Words-0.15.0.ebuild:
  x86 stable, bug 192247

  16 Sep 2007; Jeroen Roovers <jer@gentoo.org>
  PEAR-Numbers_Words-0.15.0.ebuild:
  Stable for HPPA (bug #192247).

  15 Aug 2007; Jakub Moc <jakub@gentoo.org> +metadata.xml,
  +PEAR-Numbers_Words-0.15.0.ebuild:
  Version bump, Bug 158633

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  21 May 2006; Luca Longinotti <chtekk@gentoo.org>
  -PEAR-Numbers_Words-0.13.1.ebuild:
  Remove old-style PHP packages.

  30 Mar 2006; Joseph Jezak <josejx@gentoo.org>
  PEAR-Numbers_Words-0.14.0.ebuild:
  Marked ppc stable for bug #119722.

  18 Mar 2006; Jeroen Roovers <jer@gentoo.org>