@@ -1,6 +1,22 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST Numbers_Words-0.15.0.tgz 44854 RMD160 3fd72a04e71f79cb1a9fa7db9b5716f70210ab27 SHA1 1a10e85f122fe0591d8fe1159afb80cddd30e6af SHA256 1802c3b5c4e5b75f18c77b244b789d8605f15d49b59ab36ec724b4c54a9b7abe
 DIST Numbers_Words-0.16.1.tgz 52503 RMD160 5c92e4dae538545c91ec04f581c85429062b41e5 SHA1 be86acb627f8a461d5fa9493717869435c6a6967 SHA256 6bbc7f1c39b3b695b887485aa1217af3eb3b2367634cdf207d116e7f6f2e75da
+DIST Numbers_Words-0.16.2.tgz 52956 RMD160 05f4151fb27c2d5ded8624d9f40e5e03ef962afe SHA1 f699aeb23830407ab3bab21317835c12960815fe SHA256 8ccfc97c911b90826e52ad6db80cc425384e23fc10cc7a6742f0f000e63b64a6
 EBUILD PEAR-Numbers_Words-0.15.0.ebuild 412 RMD160 e377993db18a62da04d279afb638a81a68760e63 SHA1 aa01bea122c70faa714c5858943d7d9053462ba1 SHA256 2c60f9c20a6622a0c3ad1ef76a755b4f64d86f13d2726795793d30d1a9e6f020
 EBUILD PEAR-Numbers_Words-0.16.1.ebuild 422 RMD160 f6ac09c0dcca589f6d107fc1b7ff4707ead09f58 SHA1 cbcd1776c371dd2f644fd3baa640d727a26fecea SHA256 a8852a7d353ec73a3c1a0d18256bc021fd139d1fd22762fb7bb3e0c59c574c6d
-MISC ChangeLog 3859 RMD160 8a5559f5a2bcca7e7e92a08dd2ee2487c91c6de2 SHA1 0b093c70227144da29fb6c3f735b4d3fd8f489b7 SHA256 dc67ef758972dad3626d024cf3531808c4c5998455fbed71de8de0ea2fd50906
+EBUILD PEAR-Numbers_Words-0.16.2.ebuild 424 RMD160 c728bff2a60b85b24939dd75cfbe57b68afd9884 SHA1 c6ff22165a4ad95f188b08b57eaea314a7ac8ce8 SHA256 f1f46e2ccb33e3da8a6c6e80f62e96c1f4867de92921082b027e74c849f58c58
+MISC ChangeLog 4010 RMD160 69d6de701838ca1640b7a8476aff4027942a809f SHA1 d7aa1eb375823d7af826fbd4efc28faa96f65e35 SHA256 f2ae6bff9c1dded203754d837708710101618ef83df6034a497ca8f2bfe7ab7b
 MISC metadata.xml 156 RMD160 a3a59cdc3ac33d711123b2d7e2b1deb2984aa101 SHA1 1f452f476317b4634c684eabfd8840d06d35b414 SHA256 f6d70434415ff7294f2a64e7870f32318c5fab9153fe63a58841b12d897da6ba
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQEcBAEBAgAGBQJO5dVGAAoJEGurSuXEqSv1j34H/AmuJFskwF1NpeTo1Uen88Id
+RduQ107V0yGTmkd9DefIhaWAb3vVKKyaTFYZhoks2ChyFgjhNNI7V5pV0hVFXwLi
+KFPQjeBXA3rzOg7y9wSXER1ttuIgaEJIcvZW9mwR2DMIkRexY/7g1dRtPOUywwXL
+LH8gXTDTQHXyhjUR7brCiZFsdEET+i22G7/RAkAZUO93aPUGcmrVs2yfxeXThhOJ
+B7qfCcWyrCrO3qfiJD1jhN9ogFXmdgYUP0ZU65CC080O7OjbVzg2RIX5OwnuZDt3
+DocUO9mXlFn5erqnBNLJjeb++UEIWF7HC9+8A8lTN52R9knlgC2yklWRIU3JYmA=
+=nd++
+-----END PGP SIGNATURE-----
