@@ -1,0 +1,12 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Numbers_Words/PEAR-Numbers_Words-0.16.2.ebuild,v 1.1 2011/12/12 10:19:20 olemarkus Exp $
+
+inherit php-pear-r1
+
+DESCRIPTION="Provides methods for spelling numerals in words."
+
+LICENSE="PHP-3"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86"
+IUSE=""
